--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -24,7 +24,7 @@
             android:contentDescription="@string/trip_image"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:padding="16dp">
@@ -33,8 +33,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/trip_name"
-                android:textAppearance="?attr/textAppearanceTitleMedium"
-                android:text="title" />
+                android:textAppearance="?attr/textAppearanceTitleMedium" />
             <TextView
                 android:id="@+id/trip_location"
                 android:layout_width="wrap_content"
@@ -42,14 +41,12 @@
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 android:textColor="?android:attr/textColorSecondary"
                 android:layout_marginTop="8dp"
-                android:text="secondary text"
                 app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/trip_description"
                 android:layout_marginTop="16dp"
-                android:text="supporting text"
                 android:textAppearance="?attr/textAppearanceBodyMedium"
                 android:textColor="?android:attr/textColorSecondary" />
         </LinearLayout>
