--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -19,7 +19,6 @@
             android:layout_width="match_parent"
             android:layout_height="194dp"
             android:id="@+id/main_trip_picture"
-            app:srcCompat="@drawable/ic_baseline_account_circle_24"
             android:scaleType="centerCrop"
             android:contentDescription="@string/trip_image"/>
 
@@ -34,14 +33,27 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/trip_name"
                 android:textAppearance="?attr/textAppearanceTitleMedium" />
-            <TextView
-                android:id="@+id/trip_location"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?attr/textAppearanceBodyMedium"
-                android:textColor="?android:attr/textColorSecondary"
-                android:layout_marginTop="8dp"
-                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />
+                android:orientation="horizontal"
+                android:layout_marginTop="8dp">
+                <TextView
+                    android:id="@+id/trip_location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBodyMedium"
+                    android:textColor="?android:attr/textColorSecondary"
+                    app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />
+                <TextView
+                    android:id="@+id/trip_start_end_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?attr/textAppearanceBodyMedium"
+                    android:textColor="?android:attr/textColorSecondary"
+                    app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
+                    android:layout_marginStart="8dp" />
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
