--- a/app/src/main/res/layout/fragment_new_trip.xml
+++ b/app/src/main/res/layout/fragment_new_trip.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,9 +7,9 @@
     tools:context=".fragments.NewTripFragment">
 
     <com.google.android.material.progressindicator.LinearProgressIndicator
+        android:id="@+id/new_trip_progress_indicator"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/new_trip_progress_indicator" />
+        android:layout_height="wrap_content" />
 
     <ImageButton
         android:id="@+id/trip_images_button"
@@ -67,9 +66,9 @@
                     android:id="@+id/trip_start_date"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:focusable="false"
                     android:hint="@string/trip_start_date"
-                    android:inputType="date"
-                    android:focusable="false" />
+                    android:inputType="date" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -80,34 +79,20 @@
                     android:id="@+id/trip_end_date"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:focusable="false"
                     android:hint="@string/trip_end_date"
-                    android:inputType="date"
-                    android:focusable="false" />
+                    android:inputType="date" />
             </com.google.android.material.textfield.TextInputLayout>
         </TableRow>
     </TableLayout>
 
-    <FrameLayout
+    <EditText
+        android:id="@+id/trip_description"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <EditText
-            android:id="@+id/trip_description"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:autofillHints="none"
-            android:gravity="start|top"
-            android:hint="@string/trip_description"
-            android:inputType="text" />
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/save_new_trip_button"
-            style="?attr/floatingActionButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="16dp"
-            android:contentDescription="@string/save_new_trip_button"
-            app:srcCompat="@drawable/ic_baseline_check_24" />
-    </FrameLayout>
+        android:layout_height="match_parent"
+        android:autofillHints="none"
+        android:gravity="start|top"
+        android:hint="@string/trip_description"
+        android:inputType="text" />
 
 </LinearLayout>
