--- a/app/src/main/res/layout/card_trip.xml
+++ b/app/src/main/res/layout/card_trip.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/trip_name"/>
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/trip_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -37,7 +37,7 @@
             app:layout_constraintTop_toBottomOf="@+id/main_trip_picture"
             android:layout_marginTop="16dp"/>
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/trip_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -49,10 +49,10 @@
             app:layout_constraintStart_toStartOf="parent"
             app:startIconContentDescription="@string/location_icon_description"
             app:drawableStartCompat="@drawable/ic_baseline_location_on_24">
-        </TextView>
+        </com.google.android.material.textview.MaterialTextView>
 
-        <TextView
-            android:id="@+id/trip_start_end_date"
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/trip_card_start_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -63,19 +63,32 @@
             app:layout_constraintTop_toBottomOf="@id/trip_location"
             app:startIconContentDescription="@string/calendar_icon_description"
             app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24">
-        </TextView>
+        </com.google.android.material.textview.MaterialTextView>
 
-        <TextView
+        <com.google.android.material.textview.MaterialTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/trip_card_end_date"
+            android:layout_marginTop="8dp"
+            android:textAppearance="?attr/textAppearanceBodyMedium"
+            android:textColor="?android:attr/textColorSecondary"
+            android:drawablePadding="2dp"
+            app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
+            app:startIconContentDescription="@string/calendar_icon_description"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/trip_card_start_date"/>
+
+        <com.google.android.material.textview.MaterialTextView
             android:id="@+id/trip_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?attr/textAppearanceBodyMedium"
             android:textColor="?android:attr/textColorSecondary"
             android:layout_marginTop="16dp"
-            app:layout_constraintTop_toBottomOf="@+id/trip_start_end_date"
+            app:layout_constraintTop_toBottomOf="@+id/trip_card_end_date"
             app:layout_constraintStart_toStartOf="parent"/>
 
-        <CheckBox
+        <com.google.android.material.checkbox.MaterialCheckBox
             android:id="@+id/favorite_trip"
             android:layout_width="24sp"
             android:layout_height="24sp"
