--- a/app/src/main/res/layout/fragment_trip_content.xml
+++ b/app/src/main/res/layout/fragment_trip_content.xml
@@ -18,7 +18,7 @@
         app:layout_constraintHeight_default="percent"
         app:layout_constraintHeight_percent="0.4" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/content_trip_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toStartOf="@+id/content_favorite_trip"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <CheckBox
+    <com.google.android.material.checkbox.MaterialCheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/content_favorite_trip"
@@ -39,41 +39,55 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBaseline_toBaselineOf="@+id/content_trip_name"/>
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/content_trip_destination"
         android:layout_width="wrap_content"
         android:layout_height="20sp"
         android:layout_marginStart="16dp"
-        android:textAppearance="?attr/textAppearanceBodyMedium"
-        android:textColor="?android:attr/textColorSecondary"
-        android:drawablePadding="2dp"
-        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
-        app:layout_constraintBaseline_toBaselineOf="@+id/content_trip_dates"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/content_trip_dates"
-        android:layout_width="wrap_content"
-        android:layout_height="20sp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:textAppearance="?attr/textAppearanceBodyMedium"
         android:textColor="?android:attr/textColorSecondary"
         android:drawablePadding="2dp"
-        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
-        app:layout_constraintStart_toEndOf="@+id/content_trip_destination"
-        app:layout_constraintTop_toBottomOf="@+id/content_trip_name" />
+        app:drawableStartCompat="@drawable/ic_baseline_location_on_24"
+        app:layout_constraintTop_toBottomOf="@+id/content_trip_name"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <TextView
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/content_trip_start_date"
+        android:layout_width="wrap_content"
+        android:layout_height="20sp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:textAppearance="?attr/textAppearanceBodyMedium"
+        android:textColor="?android:attr/textColorSecondary"
+        android:drawablePadding="2dp"
+        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content_trip_destination" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:layout_width="wrap_content"
+        android:layout_height="20sp"
+        android:id="@+id/content_trip_end_date"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:textAppearance="?attr/textAppearanceBodyMedium"
+        android:textColor="?android:attr/textColorSecondary"
+        android:drawablePadding="2dp"
+        app:drawableStartCompat="@drawable/ic_baseline_calendar_today_24"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content_trip_start_date" />
+
+    <com.google.android.material.textview.MaterialTextView
         android:id="@+id/content_trip_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:paddingHorizontal="16dp"
         android:textAppearance="?attr/textAppearanceBodyMedium"
         android:textColor="?android:attr/textColorSecondary"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/content_trip_destination" />
+        app:layout_constraintTop_toBottomOf="@id/content_trip_end_date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
